# second-opinion-ruler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/second_opinion_ruler/: __init__.py  main.py
tests/: test_second_opinion_ruler.py
